logs/Slang/generated/keywords/5.6.2--keyword_class.sv.log
name: keyword_class
description: The 'class' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_class.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_class.sv:8:8: error: expected declarator
    bit class;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_class.sv:8:9: error: language feature not yet supported
    bit class;
        ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_class.sv:8:14: error: expected identifier
    bit class;
             ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_class.sv:9:1: error: expected member
endmodule
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_class.sv:9:10: error: expected 'endclass'
endmodule
         ^
